Move eslintrc into root folder of build-db

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lerna:bootstrap": "lerna bootstrap",
     "build": "dotenv lerna run build --stream",
     "test": "dotenv lerna run test --stream",
-    "lint": "eslint ./packages/**/lib"
+    "lint": "eslint ./packages"
   },
   "repository": {
     "type": "git",
