Create react app for component library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "eslint.workingDirectories": [
-        "./packages/build-db"
+        "./packages/build-db",
+        "./packages/component-library"
     ]
 }
