--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "~5.2.0",
+    "@storybook/addon-knobs": "~5.2.0",
     "@storybook/addon-links": "~5.2.0",
     "@storybook/addons": "~5.2.0",
     "@storybook/react": "~5.2.0",
