TypeScript is the default for Component Library

--- a/packages/component-library/.gitignore
+++ b/packages/component-library/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+/dist
 
 # misc
 .DS_Store
@@ -23,4 +23,5 @@ yarn-debug.log*
 yarn-error.log*
 
 # storybook
-storybook-static
+/storybook-dist
+/storybook-static
