--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "baseUrl": "./",
+    "allowSyntheticDefaultImports": true,
+    "module": "esnext",
     "target": "esnext",
-    "lib": [
-      "es6",
-      "dom"
-    ],
+    "lib": ["es6", "dom"],
     "sourceMap": true,
+    "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "./src",
@@ -16,18 +16,10 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "declaration": true,
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "resolveJsonModule": true,
-    "noEmit": true
+    "strict": true
   },
   "include": [
-    "src"
+    "./src"
   ],
   "exclude": [
     "**/*.test.ts",
