--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "description": "My portfolio",
   "scripts": {
-    "postinstall": "lerna exec npm install --stream",
+    "postinstall": "lerna bootstrap --force-local",
+    "lerna:install": "lerna exec npm install --stream",
+    "lerna:update": "lerna exec npm update --stream",
     "start": "dotenv lerna run start --parallel",
     "watch": "dotenv lerna run watch --stream",
     "build": "dotenv lerna run build --stream",
