--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "start-storybook -p 9009 -s public",
     "build:storybook": "build-storybook -s public",
-    "build:ts": "tsc",
+    "build:ts": "tsc -b tsconfig.build.json",
     "build": "npm-run-all build:*",
     "test": "react-scripts test"
   },
@@ -35,6 +35,7 @@
     "@storybook/addon-actions": "~5.2.8",
     "@storybook/addon-knobs": "~5.2.8",
     "@storybook/addon-links": "~5.2.8",
+    "@storybook/addon-storyshots": "~5.2.8",
     "@storybook/addons": "~5.2.8",
     "@storybook/react": "~5.2.8",
     "@types/jest": "24.0.23",
@@ -42,12 +43,15 @@
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
     "awesome-typescript-loader": "~5.2.1",
+    "babel-plugin-macros": "~2.7.1",
     "npm-run-all": "~4.1.5",
     "react": "^16.12.0",
     "react-docgen-typescript-loader": "~3.6.0",
     "react-docgen-typescript-webpack-plugin": "~1.1.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "react-test-renderer": "~16.12.0",
+    "require-context.macro": "~1.2.2",
     "sass": "~1.23.7",
     "typescript": "3.7.2"
   }
