--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -42,6 +42,7 @@
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
+    "@types/styled-components": "~4.4.0",
     "awesome-typescript-loader": "~5.2.1",
     "babel-plugin-macros": "~2.7.1",
     "npm-run-all": "~4.1.5",
@@ -53,6 +54,7 @@
     "react-test-renderer": "~16.12.0",
     "require-context.macro": "~1.2.2",
     "sass": "~1.23.7",
+    "styled-components": "~4.4.1",
     "typescript": "3.7.2"
   }
 }
