--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -9,7 +9,6 @@
     "start": "start-storybook -p 9009 -s public",
     "build:storybook": "build-storybook -s public",
     "build:ts": "tsc -b tsconfig.build.json",
-    "build": "npm-run-all build:*",
     "test": "react-scripts test"
   },
   "eslintConfig": {
@@ -29,32 +28,31 @@
   },
   "peerDependencies": {
     "react-dom": "^16.12.0",
-    "react": "^16.12.0"
+    "react": "^16.12.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "~5.2.8",
-    "@storybook/addon-knobs": "~5.2.8",
-    "@storybook/addon-links": "~5.2.8",
-    "@storybook/addon-storyshots": "~5.2.8",
-    "@storybook/addons": "~5.2.8",
-    "@storybook/react": "~5.2.8",
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.14",
-    "@types/react": "16.9.13",
-    "@types/react-dom": "16.9.4",
-    "@types/styled-components": "~4.4.0",
-    "awesome-typescript-loader": "~5.2.1",
-    "babel-plugin-macros": "~2.7.1",
-    "npm-run-all": "~4.1.5",
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-knobs": "^5.2.8",
+    "@storybook/addon-links": "^5.2.8",
+    "@storybook/addon-storyshots": "^5.2.8",
+    "@storybook/addons": "^5.2.8",
+    "@storybook/react": "^5.2.8",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.14",
+    "@types/react": "^16.9.15",
+    "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^4.4.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-plugin-macros": "^2.7.1",
     "react": "^16.12.0",
-    "react-docgen-typescript-loader": "~3.6.0",
-    "react-docgen-typescript-webpack-plugin": "~1.1.0",
+    "react-docgen-typescript-loader": "^3.6.0",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
-    "react-test-renderer": "~16.12.0",
-    "require-context.macro": "~1.2.2",
-    "sass": "~1.23.7",
-    "styled-components": "~4.4.1",
-    "typescript": "3.7.2"
+    "react-scripts": "^3.3.0",
+    "react-test-renderer": "^16.12.0",
+    "require-context.macro": "^1.2.2",
+    "styled-components": "^4.4.1",
+    "typescript": "^3.7.3"
   }
 }
