Add main.ts as entry point

--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -5,6 +5,8 @@
   "description": "My own component library",
   "author": "Marco Montalbano <marcomontalbano.work@gmail.com>",
   "homepage": "https://github.com/marcomontalbano/portfolio/tree/master/packages/component-library#readme",
+  "main": "./dist/main.js",
+  "types": "./dist/main.d.ts",
   "scripts": {
     "start": "start-storybook -p 9009 -s public",
     "build:storybook": "build-storybook -s public",
