--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "allowSyntheticDefaultImports": true,
-    "module": "esnext",
-    "target": "esnext",
+    "module": "CommonJS",
+    "target": "ES5",
     "lib": [
       "es6",
       "dom"
@@ -27,7 +27,7 @@
     "noEmit": true
   },
   "include": [
-    "./src/**/*.tsx"
+    "./src/**/*.ts*"
   ],
   "exclude": [
     "**/*.stories.tsx"
