--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -11,6 +11,8 @@
     "gatsby-plugin-offline": "~3.0.29",
     "gatsby-plugin-react-helmet": "~3.1.18",
     "gatsby-plugin-sharp": "~2.3.7",
+    "gatsby-plugin-typescript": "~2.1.22",
+    "gatsby-plugin-typescript-checker": "~1.1.1",
     "gatsby-source-filesystem": "~2.1.42",
     "gatsby-transformer-sharp": "~2.3.9",
     "prop-types": "^15.7.2",
@@ -19,6 +21,10 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "@types/node": "~12.12.17",
+    "@types/react": "~16.9.16",
+    "@types/react-dom": "~16.9.4",
+    "@types/react-helmet": "~5.0.14",
     "prettier": "^1.19.1"
   },
   "keywords": [
