--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "website",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "My personal website",
+  "version": "0.0.1-alpha.0",
+  "author": "Marco Montalbano <me@marcomontalbano.com>",
   "dependencies": {
     "gatsby": "~2.18.11",
     "gatsby-image": "~2.2.36",
