--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -4,10 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "module": "CommonJS",
     "target": "ES5",
-    "lib": [
-      "es6",
-      "dom"
-    ],
+    "lib": ["es6", "dom"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
@@ -30,6 +27,8 @@
     "./src/**/*.ts*"
   ],
   "exclude": [
-    "**/*.stories.tsx"
+    "**/*.stories.ts*",
+    "**/*.test.ts*",
+    "**/*.spec.ts*"
   ]
 }
