--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "portfolio",
+  "name": "marcomontalbano.github.io",
   "private": true,
   "license": "MIT",
-  "description": "My portfolio",
+  "description": "My website",
   "scripts": {
     "postinstall": "lerna bootstrap --force-local",
     "lerna:install": "lerna exec npm install --stream",
@@ -15,13 +15,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/marcomontalbano/portfolio.git"
+    "url": "git+https://github.com/marcomontalbano/marcomontalbano.github.io.git"
   },
   "author": "Marco Montalbano <me@marcomontalbano.com>",
   "bugs": {
-    "url": "https://github.com/marcomontalbano/portfolio/issues"
+    "url": "https://github.com/marcomontalbano/marcomontalbano.github.io/issues"
   },
-  "homepage": "https://marcomontalbano.github.io/portfolio",
+  "homepage": "https://marcomontalbano.github.io/marcomontalbano.github.io",
   "devDependencies": {
     "dotenv": "~8.1.0",
     "lerna": "~3.16.5"
