--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,6 +1,7 @@
 {
   "name": "component-library",
   "version": "0.0.1-alpha.1",
+  "license": "MIT",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
@@ -14,7 +15,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/marcomontalbano/marcomontalbano.github.io.git",
+    "url": "ssh://git@github.com/marcomontalbano/marcomontalbano.github.io.git",
     "directory": "packages/component-library"
   },
   "scripts": {
