--- a/packages/component-library/tsconfig.build.json
+++ b/packages/component-library/tsconfig.build.json
@@ -1,6 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "CommonJS",
+    "target": "ES5",
     "declaration": true,
     "isolatedModules": false,
     "noEmit": false
