Add @org to project names

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marcomontalbano.github.io",
+  "name": "marcomontalbano-github-io",
   "private": true,
   "license": "MIT",
   "description": "My website",
