--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website",
+  "name": "@marcomontalbano-github-io/website",
   "private": true,
   "description": "My personal website",
   "author": "Marco Montalbano <me@marcomontalbano.com>",
