--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "component-library",
+  "name": "@marcomontalbano-github-io/component-library",
   "version": "0.0.1-alpha.2",
   "license": "MIT",
   "publishConfig": {
