--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -4,6 +4,7 @@
   "description": "My personal website",
   "author": "Marco Montalbano <me@marcomontalbano.com>",
   "dependencies": {
+    "@marcomontalbano/component-library": "0.0.1-alpha.3",
     "gatsby": "~2.18.11",
     "gatsby-image": "~2.2.36",
     "gatsby-plugin-manifest": "~2.2.33",
@@ -14,17 +15,19 @@
     "gatsby-plugin-typescript-checker": "~1.1.1",
     "gatsby-source-filesystem": "~2.1.42",
     "gatsby-transformer-sharp": "~2.3.9",
-    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "~4.4.1"
   },
   "devDependencies": {
     "@types/node": "~12.12.17",
     "@types/react": "~16.9.16",
     "@types/react-dom": "~16.9.4",
     "@types/react-helmet": "~5.0.14",
-    "prettier": "^1.19.1"
+    "@types/styled-components": "~4.4.1",
+    "prettier": "^1.19.1",
+    "typescript": "~3.7.3"
   },
   "keywords": [
     "gatsby"
