--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,12 +16,14 @@
     "@types/react-dom": "~16.9.4",
     "@types/react-helmet": "~5.0.14",
     "@types/styled-components": "~4.4.1",
+    "babel-plugin-styled-components": "~1.10.6",
     "gatsby": "~2.18.11",
     "gatsby-image": "~2.2.36",
     "gatsby-plugin-manifest": "~2.2.33",
     "gatsby-plugin-offline": "~3.0.29",
     "gatsby-plugin-react-helmet": "~3.1.18",
     "gatsby-plugin-sharp": "~2.3.7",
+    "gatsby-plugin-styled-components": "~3.1.16",
     "gatsby-plugin-typescript": "~2.1.22",
     "gatsby-plugin-typescript-checker": "~1.1.1",
     "gatsby-source-filesystem": "~2.1.42",
