--- a/packages/component-library/tsconfig.build.json
+++ b/packages/component-library/tsconfig.build.json
@@ -3,8 +3,12 @@
   "compilerOptions": {
     "module": "CommonJS",
     "target": "ES5",
+
+    "sourceMap": true,
     "declaration": true,
-    "isolatedModules": false,
+    "declarationMap": true,
+    "composite": true,
+
     "noEmit": false
   },
 }
