--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -1,29 +1,31 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
     "allowSyntheticDefaultImports": true,
-    "module": "esnext",
-    "target": "esnext",
-    "lib": [
-      "es6",
-      "dom"
-    ],
-    "sourceMap": true,
+    "module": "ESNext",
+    "target": "ES5",
+    "lib": ["ES6", "DOM"],
+
+    "strict": true,
+
+    /* additional checks */
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+
+    /* module resolution options */
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+
+    /* react */
     "allowJs": false,
     "jsx": "react",
-    "moduleResolution": "node",
+    "skipLibCheck": true,
+
     "rootDir": "./src",
     "outDir": "./dist",
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+
     "noEmit": true
   },
   "include": [
