--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -49,6 +49,7 @@
     "@storybook/addon-knobs": "^5.3.17",
     "@storybook/addon-links": "^5.3.17",
     "@storybook/addon-storyshots": "^5.3.17",
+    "@storybook/addon-viewport": "~5.3.17",
     "@storybook/addons": "^5.3.17",
     "@storybook/preset-create-react-app": "~2.1.0",
     "@storybook/react": "^5.3.17",
