--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1-alpha.3",
   "license": "MIT",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://npm.pkg.github.com/",
+    "directory": "./dist"
   },
   "description": "My own component library",
   "author": "Marco Montalbano <me@marcomontalbano.com>",
@@ -49,12 +50,12 @@
     "@storybook/addon-knobs": "^5.3.17",
     "@storybook/addon-links": "^5.3.17",
     "@storybook/addon-storyshots": "^5.3.17",
-    "@storybook/addon-viewport": "~5.3.17",
+    "@storybook/addon-viewport": "^5.3.17",
     "@storybook/addons": "^5.3.17",
-    "@storybook/preset-create-react-app": "~2.1.0",
+    "@storybook/preset-create-react-app": "^2.1.0",
     "@storybook/react": "^5.3.17",
     "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.2",
+    "@types/node": "^13.9.3",
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
     "@types/styled-components": "^5.0.1",
