--- a/packages/dump-github/package.json
+++ b/packages/dump-github/package.json
@@ -30,15 +30,15 @@
     "url": "https://github.com/marcomontalbano/portfolio/issues"
   },
   "devDependencies": {
-    "eslint": "~6.7.2",
-    "eslint-config-airbnb-base": "~14.0.0",
-    "eslint-plugin-import": "~2.19.1",
-    "eslint-plugin-jest": "~23.1.1",
-    "jest": "~24.9.0",
-    "nock": "~11.7.0"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.2",
+    "jest": "^25.1.0",
+    "nock": "^12.0.3"
   },
   "dependencies": {
-    "node-fetch": "~2.6.0",
-    "showdown": "~1.9.1"
+    "node-fetch": "^2.6.0",
+    "showdown": "^1.9.1"
   }
 }
