--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -5,30 +5,31 @@
   "author": "Marco Montalbano <me@marcomontalbano.com>",
   "dependencies": {
     "@marcomontalbano/component-library": "0.0.1-alpha.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "styled-components": "~4.4.1"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "~12.12.17",
-    "@types/react": "~16.9.16",
-    "@types/react-dom": "~16.9.4",
-    "@types/react-helmet": "~5.0.14",
-    "@types/styled-components": "~4.4.1",
-    "babel-plugin-styled-components": "~1.10.6",
-    "gatsby": "~2.18.11",
-    "gatsby-image": "~2.2.36",
-    "gatsby-plugin-manifest": "~2.2.33",
-    "gatsby-plugin-offline": "~3.0.29",
-    "gatsby-plugin-react-helmet": "~3.1.18",
-    "gatsby-plugin-sharp": "~2.3.7",
-    "gatsby-plugin-styled-components": "~3.1.16",
-    "gatsby-plugin-typescript": "~2.1.22",
-    "gatsby-plugin-typescript-checker": "~1.1.1",
-    "gatsby-source-filesystem": "~2.1.42",
-    "gatsby-transformer-sharp": "~2.3.9",
-    "prettier": "^1.19.1"
+    "@types/node": "^13.9.3",
+    "@types/react": "^16.9.25",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-helmet": "^5.0.15",
+    "@types/styled-components": "^5.0.1",
+    "babel-plugin-styled-components": "^1.10.7",
+    "gatsby": "^2.20.3",
+    "gatsby-image": "^2.3.1",
+    "gatsby-plugin-manifest": "^2.3.2",
+    "gatsby-plugin-offline": "^3.1.1",
+    "gatsby-plugin-react-helmet": "^3.2.1",
+    "gatsby-plugin-sharp": "^2.5.2",
+    "gatsby-plugin-styled-components": "^3.2.1",
+    "gatsby-plugin-typescript": "^2.3.1",
+    "gatsby-plugin-typescript-checker": "^1.1.1",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-sharp": "^2.4.2",
+    "prettier": "^2.0.1",
+    "typescript": "^3.8.3"
   },
   "keywords": [
     "gatsby"
