--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.rulers": [120],
     "eslint.workingDirectories": [
         "./packages/dump-github",
         "./packages/component-library"
