--- a/package.json
+++ b/package.json
@@ -26,10 +26,18 @@
     "url": "https://github.com/marcomontalbano/marcomontalbano.github.io/issues"
   },
   "homepage": "https://marcomontalbano.github.io/marcomontalbano.github.io",
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
+  },
   "devDependencies": {
     "fs-extra": "~9.0.0",
+    "husky": "~4.2.3",
     "lerna": "~3.20.2",
-    "npm-run-all": "~4.1.5"
+    "lint-staged": "~10.0.9",
+    "npm-run-all": "~4.1.5",
+    "prettier": "2.0.2"
   },
   "engines": {
     "node": ">= 10.16.x <= 12.x",
