--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "start-storybook -p 9009 -s public",
     "build:storybook": "build-storybook -s public",
-    "build:ts": "tsc -b tsconfig.build.json",
+    "build:dist": "tsc -b tsconfig.build.json",
     "test": "react-scripts test --watchAll=false"
   },
   "eslintConfig": {
