--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -21,6 +21,7 @@
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-manifest": "^2.3.2",
     "gatsby-plugin-offline": "^3.1.1",
+    "gatsby-plugin-prefetch-google-fonts": "~1.4.3",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sharp": "^2.5.2",
     "gatsby-plugin-styled-components": "^3.2.1",
