--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "description": "My website",
   "scripts": {
     "clean": "rm -rf node_modules/ */*/node_modules */*/dist */*/tsconfig*.tsbuildinfo",
-    "postinstall": "run-s lerna:install build:dist",
+    "postinstall": "run-s lerna:install",
     "prestart": "run-s build:dist",
     "start": "dotenv lerna run start --parallel",
     "build:dist": "dotenv lerna run build:dist --parallel",
     "postbuild:dist": "npm run lerna:fixDependencies",
-    "test": "dotenv lerna run test",
-    "lint": "dotenv lerna run lint",
+    "test": "lerna run test",
+    "lint": "lerna run lint",
     "watch": "npx chokidar-cli \"packages/component-library/src/**/*.{j,t}s{,x}\" -c \"npm run build:dist\"",
     "lerna:fixDependencies": "node lernaCopy.js",
     "lerna:version": "lerna version",
