--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,11 +23,11 @@ jobs:
           from: ${{ steps.tags.outputs.old }}
           to: ${{ steps.tags.outputs.new }}
         env:
-          GITHUB_AUTH: ${{ secrets.GH_TOKEN }}
+          GITHUB_AUTH: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create a draft GitHub release
         uses: babel/actions/publish-github-release@v2
         with:
           tag: ${{ steps.tags.outputs.new }}
           changelog: ${{ steps.changelog.outputs.changelog }}
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
