--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -22,6 +22,7 @@
     "start": "start-storybook -p 9009 -s public",
     "build:storybook": "build-storybook -s public",
     "build:dist": "tsc -b tsconfig.build.json",
+    "prepublishOnly": "npm run build:dist",
     "test": "react-scripts test --watchAll=false"
   },
   "eslintConfig": {
