--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marcomontalbano/component-library",
-  "version": "0.0.1-alpha.9",
+  "version": "0.2.0",
   "license": "MIT",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
