--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,17 @@
   "packages": [
     "packages/*"
   ],
+  "changelog": {
+    "cacheDir": ".changelog",
+    "labels": {
+      "PR: Beauty :nail_care:": ":nail_care: Beauty",
+      "PR: Bug Fix :bug:": ":bug: Bug Fix",
+      "PR: Dependencies :up:": ":up: Dependencies",
+      "PR: Documentation :memo:": ":memo: Documentation",
+      "PR: Internal :house:": ":house: Internal",
+      "PR: New Feature :rocket:": ":rocket: New Feature"
+    }
+  },
   "command": {
     "create": {
       "license": "MIT",
