--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,7 +23,7 @@ jobs:
           from: ${{ steps.tags.outputs.old }}
           to: ${{ steps.tags.outputs.new }}
         env:
-          GITHUB_AUTH: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_AUTH: ${{ secrets.GH_TOKEN }}
 
       - name: Create a draft GitHub release
         uses: babel/actions/publish-github-release@v2
