--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "My website",
   "scripts": {
     "clean": "rm -rf data/*.json node_modules/ */*/node_modules */*/dist */*/tsconfig*.tsbuildinfo */*/.cache */website/public",
-    "postinstall": "lerna exec npm install --parallel",
+    "postinstall": "lerna bootstrap --force-local",
     "test": "lerna run test",
     "lint": "lerna run lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
